[tool.poetry]
name = "pplx"
version = "0.1.0"
description = "Perplexity Wrapper for Langchain"
authors = ["markyfsun <sunyunfei201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
langchain = "^0.0.347"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
